libs/common/src/main/java/com/example/libs/common/error/AccessDeniedException.java
package com.example.libs.common.error;

/**
 * Ошибка права доступа
 */
public class AccessDeniedException extends RuntimeException{
    public AccessDeniedException(){super();}

}
